headers/sqlucode.h

SQLRETURN SQL_API SQLSetCursorNameW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCursor,
    SQLSMALLINT          cbCursor);
SQLRETURN SQL_API SQLColumnsW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLWCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLWCHAR        * szTableName,
    SQLSMALLINT          cbTableName,
    SQLWCHAR        * szColumnName,
    SQLSMALLINT          cbColumnName);
SQLRETURN SQL_API SQLGetConnectOptionW (
    SQLHDBC          hdbc,
    SQLUSMALLINT      fOption,
    SQLPOINTER          pvParam);
SQLRETURN SQL_API SQLGetInfoW (
    SQLHDBC          hdbc,
    SQLUSMALLINT      fInfoType,
    SQLPOINTER          rgbInfoValue,
    SQLSMALLINT          cbInfoValueMax,
    SQLSMALLINT        * pcbInfoValue);
SQLRETURN SQL_API SQLGetTypeInfoW (
    SQLHSTMT          StatementHandle,
    SQLSMALLINT          DataType);
SQLRETURN SQL_API SQLSetConnectOptionW (
    SQLHDBC          hdbc,
    SQLUSMALLINT      fOption,
    SQLULEN          vParam);
SQLRETURN SQL_API SQLSpecialColumnsW (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      fColType,
    SQLWCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLWCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLWCHAR        * szTableName,
    SQLSMALLINT          cbTableName,
    SQLUSMALLINT      fScope,
    SQLUSMALLINT      fNullable);
SQLRETURN SQL_API SQLStatisticsW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLWCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLWCHAR        * szTableName,
    SQLSMALLINT          cbTableName,
    SQLUSMALLINT      fUnique,
    SQLUSMALLINT      fAccuracy);
SQLRETURN SQL_API SQLTablesW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLWCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLWCHAR        * szTableName,
    SQLSMALLINT          cbTableName,
    SQLWCHAR        * szTableType,
    SQLSMALLINT          cbTableType);
SQLRETURN SQL_API SQLDataSourcesW (
    SQLHENV          henv,
    SQLUSMALLINT      fDirection,
    SQLWCHAR        * szDSN,
    SQLSMALLINT          cbDSNMax,
    SQLSMALLINT        * pcbDSN,
    SQLWCHAR        * szDescription,
    SQLSMALLINT          cbDescriptionMax,
    SQLSMALLINT        * pcbDescription);
SQLRETURN SQL_API SQLDriverConnectW (
    SQLHDBC          hdbc,
    SQLHWND          hwnd,
    SQLWCHAR        * szConnStrIn,
    SQLSMALLINT          cbConnStrIn,
    SQLWCHAR        * szConnStrOut,
    SQLSMALLINT          cbConnStrOutMax,
    SQLSMALLINT        * pcbConnStrOut,
    SQLUSMALLINT      fDriverCompletion);
SQLRETURN SQL_API SQLBrowseConnectW (
    SQLHDBC          hdbc,
    SQLWCHAR        * szConnStrIn,
    SQLSMALLINT          cbConnStrIn,
    SQLWCHAR        * szConnStrOut,
    SQLSMALLINT          cbConnStrOutMax,
    SQLSMALLINT        * pcbConnStrOut);
SQLRETURN SQL_API SQLColumnPrivilegesW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLWCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLWCHAR        * szTableName,
    SQLSMALLINT          cbTableName,
    SQLWCHAR        * szColumnName,
    SQLSMALLINT          cbColumnName);
SQLRETURN SQL_API SQLGetStmtAttrW (
    SQLHSTMT          hstmt,
    SQLINTEGER          fAttribute,
    SQLPOINTER          rgbValue,
    SQLINTEGER          cbValueMax,
    SQLINTEGER        * pcbValue);
SQLRETURN SQL_API SQLSetStmtAttrW (
    SQLHSTMT          hstmt,
    SQLINTEGER          fAttribute,
    SQLPOINTER          rgbValue,
    SQLINTEGER          cbValueMax);
SQLRETURN SQL_API SQLForeignKeysW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szPkCatalogName,
    SQLSMALLINT          cbPkCatalogName,
    SQLWCHAR        * szPkSchemaName,
    SQLSMALLINT          cbPkSchemaName,
    SQLWCHAR        * szPkTableName,
    SQLSMALLINT          cbPkTableName,
    SQLWCHAR        * szFkCatalogName,
    SQLSMALLINT          cbFkCatalogName,
    SQLWCHAR        * szFkSchemaName,
    SQLSMALLINT          cbFkSchemaName,
    SQLWCHAR        * szFkTableName,
    SQLSMALLINT          cbFkTableName);
SQLRETURN SQL_API SQLNativeSqlW (
    SQLHDBC          hdbc,
    SQLWCHAR        * szSqlStrIn,
    SQLINTEGER          cbSqlStrIn,
    SQLWCHAR        * szSqlStr,
    SQLINTEGER          cbSqlStrMax,
    SQLINTEGER        * pcbSqlStr);
SQLRETURN SQL_API SQLPrimaryKeysW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLWCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLWCHAR        * szTableName,
    SQLSMALLINT          cbTableName);
SQLRETURN SQL_API SQLProcedureColumnsW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLWCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLWCHAR        * szProcName,
    SQLSMALLINT          cbProcName,
    SQLWCHAR        * szColumnName,
    SQLSMALLINT          cbColumnName);
SQLRETURN SQL_API SQLProceduresW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLWCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLWCHAR        * szProcName,
    SQLSMALLINT          cbProcName);
SQLRETURN SQL_API SQLTablePrivilegesW (
    SQLHSTMT          hstmt,
    SQLWCHAR        * szCatalogName,
    SQLSMALLINT          cbCatalogName,
    SQLWCHAR        * szSchemaName,
    SQLSMALLINT          cbSchemaName,
    SQLWCHAR        * szTableName,
    SQLSMALLINT          cbTableName);
SQLRETURN SQL_API SQLDriversW (
    SQLHENV          henv,
    SQLUSMALLINT      fDirection,
    SQLWCHAR        * szDriverDesc,
    SQLSMALLINT          cbDriverDescMax,
    SQLSMALLINT        * pcbDriverDesc,
    SQLWCHAR        * szDriverAttributes,
    SQLSMALLINT          cbDrvrAttrMax,
    SQLSMALLINT        * pcbDrvrAttr);
/*
 *  Function prototypes - ANSI
 */

SQLRETURN SQL_API SQLColAttributeA (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      iCol,
    SQLUSMALLINT      iField,
    SQLPOINTER          pCharAttr,
    SQLSMALLINT          cbCharAttrMax,
    SQLSMALLINT        * pcbCharAttr,
    SQLLEN        * pNumAttr);