sql.py


        if hasattr(self.ODBC_DRIVER, "SQLSetCursorNameW"):
            self.ODBC_DRIVER.SQLSetCursorNameW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetCursorNameW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT,)
            self.SQLSetCursorNameW = self.ODBC_DRIVER.SQLSetCursorNameW
        else:
            self.SQLSetCursorNameW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLColumnsW"):
            self.ODBC_DRIVER.SQLColumnsW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColumnsW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT,)
            self.SQLColumnsW = self.ODBC_DRIVER.SQLColumnsW
        else:
            self.SQLColumnsW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetConnectOptionW"):
            self.ODBC_DRIVER.SQLGetConnectOptionW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetConnectOptionW.argtypes = (self.SQLHDBC, self.SQLUSMALLINT, self.SQLPOINTER,)
            self.SQLGetConnectOptionW = self.ODBC_DRIVER.SQLGetConnectOptionW
        else:
            self.SQLGetConnectOptionW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetInfoW"):
            self.ODBC_DRIVER.SQLGetInfoW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetInfoW.argtypes = (self.SQLHDBC, self.SQLUSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetInfoW = self.ODBC_DRIVER.SQLGetInfoW
        else:
            self.SQLGetInfoW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetTypeInfoW"):
            self.ODBC_DRIVER.SQLGetTypeInfoW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetTypeInfoW.argtypes = (self.SQLHSTMT, self.SQLSMALLINT,)
            self.SQLGetTypeInfoW = self.ODBC_DRIVER.SQLGetTypeInfoW
        else:
            self.SQLGetTypeInfoW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetConnectOptionW"):
            self.ODBC_DRIVER.SQLSetConnectOptionW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetConnectOptionW.argtypes = (self.SQLHDBC, self.SQLUSMALLINT, self.SQLULEN,)
            self.SQLSetConnectOptionW = self.ODBC_DRIVER.SQLSetConnectOptionW
        else:
            self.SQLSetConnectOptionW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSpecialColumnsW"):
            self.ODBC_DRIVER.SQLSpecialColumnsW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSpecialColumnsW.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, self.SQLUSMALLINT, self.SQLUSMALLINT,)
            self.SQLSpecialColumnsW = self.ODBC_DRIVER.SQLSpecialColumnsW
        else:
            self.SQLSpecialColumnsW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLStatisticsW"):
            self.ODBC_DRIVER.SQLStatisticsW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLStatisticsW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, self.SQLUSMALLINT, self.SQLUSMALLINT,)
            self.SQLStatisticsW = self.ODBC_DRIVER.SQLStatisticsW
        else:
            self.SQLStatisticsW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLTablesW"):
            self.ODBC_DRIVER.SQLTablesW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLTablesW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT,)
            self.SQLTablesW = self.ODBC_DRIVER.SQLTablesW
        else:
            self.SQLTablesW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDataSourcesW"):
            self.ODBC_DRIVER.SQLDataSourcesW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDataSourcesW.argtypes = (self.SQLHENV, self.SQLUSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLDataSourcesW = self.ODBC_DRIVER.SQLDataSourcesW
        else:
            self.SQLDataSourcesW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDriverConnectW"):
            self.ODBC_DRIVER.SQLDriverConnectW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDriverConnectW.argtypes = (self.SQLHDBC, self.SQLHWND, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), self.SQLUSMALLINT,)
            self.SQLDriverConnectW = self.ODBC_DRIVER.SQLDriverConnectW
        else:
            self.SQLDriverConnectW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLBrowseConnectW"):
            self.ODBC_DRIVER.SQLBrowseConnectW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLBrowseConnectW.argtypes = (self.SQLHDBC, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLBrowseConnectW = self.ODBC_DRIVER.SQLBrowseConnectW
        else:
            self.SQLBrowseConnectW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLColumnPrivilegesW"):
            self.ODBC_DRIVER.SQLColumnPrivilegesW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColumnPrivilegesW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT,)
            self.SQLColumnPrivilegesW = self.ODBC_DRIVER.SQLColumnPrivilegesW
        else:
            self.SQLColumnPrivilegesW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetStmtAttrW"):
            self.ODBC_DRIVER.SQLGetStmtAttrW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetStmtAttrW.argtypes = (self.SQLHSTMT, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLGetStmtAttrW = self.ODBC_DRIVER.SQLGetStmtAttrW
        else:
            self.SQLGetStmtAttrW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetStmtAttrW"):
            self.ODBC_DRIVER.SQLSetStmtAttrW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetStmtAttrW.argtypes = (self.SQLHSTMT, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER,)
            self.SQLSetStmtAttrW = self.ODBC_DRIVER.SQLSetStmtAttrW
        else:
            self.SQLSetStmtAttrW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLForeignKeysW"):
            self.ODBC_DRIVER.SQLForeignKeysW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLForeignKeysW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT,)
            self.SQLForeignKeysW = self.ODBC_DRIVER.SQLForeignKeysW
        else:
            self.SQLForeignKeysW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLNativeSqlW"):
            self.ODBC_DRIVER.SQLNativeSqlW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLNativeSqlW.argtypes = (self.SQLHDBC, ctypes.POINTER(self.SQLWCHAR), self.SQLINTEGER, ctypes.POINTER(self.SQLWCHAR), self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLNativeSqlW = self.ODBC_DRIVER.SQLNativeSqlW
        else:
            self.SQLNativeSqlW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLPrimaryKeysW"):
            self.ODBC_DRIVER.SQLPrimaryKeysW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLPrimaryKeysW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT,)
            self.SQLPrimaryKeysW = self.ODBC_DRIVER.SQLPrimaryKeysW
        else:
            self.SQLPrimaryKeysW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLProcedureColumnsW"):
            self.ODBC_DRIVER.SQLProcedureColumnsW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLProcedureColumnsW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT,)
            self.SQLProcedureColumnsW = self.ODBC_DRIVER.SQLProcedureColumnsW
        else:
            self.SQLProcedureColumnsW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLProceduresW"):
            self.ODBC_DRIVER.SQLProceduresW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLProceduresW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT,)
            self.SQLProceduresW = self.ODBC_DRIVER.SQLProceduresW
        else:
            self.SQLProceduresW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLTablePrivilegesW"):
            self.ODBC_DRIVER.SQLTablePrivilegesW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLTablePrivilegesW.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT,)
            self.SQLTablePrivilegesW = self.ODBC_DRIVER.SQLTablePrivilegesW
        else:
            self.SQLTablePrivilegesW = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLDriversW"):
            self.ODBC_DRIVER.SQLDriversW.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLDriversW.argtypes = (self.SQLHENV, self.SQLUSMALLINT, ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLWCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLDriversW = self.ODBC_DRIVER.SQLDriversW
        else:
            self.SQLDriversW = self.UnimplementedSQLFunction

        ################################################################################
        ####Function prototypes - ANSI##################################################
        ################################################################################
        if hasattr(self.ODBC_DRIVER, "SQLColAttributeA"):
            self.ODBC_DRIVER.SQLColAttributeA.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLColAttributeA.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLUSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLLEN),)
            self.SQLColAttributeA = self.ODBC_DRIVER.SQLColAttributeA
        else:
            self.SQLColAttributeA = self.UnimplementedSQLFunction
